[gd_scene load_steps=18 format=3 uid="uid://bhtrn4v64iw5"]

[ext_resource type="Script" path="res://scripts/tree.gd" id="1_tpmvr"]
[ext_resource type="Texture2D" uid="uid://c1sq30txsw1bt" path="res://assets/Graphical Assets/sprites/cherry/cherry-1.png" id="2_2gsbg"]
[ext_resource type="Texture2D" uid="uid://b7yk078r0etw0" path="res://assets/Graphical Assets/sprites/cherry/cherry-2.png" id="3_5y4wu"]
[ext_resource type="Texture2D" uid="uid://j2e163c4uspk" path="res://assets/Graphical Assets/sprites/cherry/cherry-3.png" id="4_0ejfo"]
[ext_resource type="Texture2D" uid="uid://cv65luhu0op24" path="res://assets/TreeCutDown.png" id="5_yyojv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yuhqy"]
radius = 61.0663

[sub_resource type="CircleShape2D" id="CircleShape2D_w4c5i"]
radius = 106.252

[sub_resource type="AtlasTexture" id="AtlasTexture_g653x"]
atlas = ExtResource("2_2gsbg")
region = Rect2(0, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5mb0"]
atlas = ExtResource("3_5y4wu")
region = Rect2(0, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_npl4m"]
atlas = ExtResource("4_0ejfo")
region = Rect2(0, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0din"]
atlas = ExtResource("5_yyojv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qh0b3"]
atlas = ExtResource("5_yyojv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_byt8u"]
atlas = ExtResource("5_yyojv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnfik"]
atlas = ExtResource("5_yyojv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7r4rm"]
atlas = ExtResource("5_yyojv")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_852r0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g653x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5mb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npl4m")
}],
"loop": true,
"name": &"product",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0din")
}],
"loop": true,
"name": &"tree",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qh0b3")
}],
"loop": true,
"name": &"tree_40",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_byt8u")
}],
"loop": true,
"name": &"tree_60",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnfik")
}],
"loop": true,
"name": &"tree_80",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7r4rm")
}],
"loop": true,
"name": &"wood",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0yo0s"]
radius = 22.2996

[node name="tree" type="CharacterBody2D"]
scale = Vector2(0.313907, 0.38095)
script = ExtResource("1_tpmvr")

[node name="actual_collision" type="CollisionShape2D" parent="."]
position = Vector2(79.6415, 49.8754)
shape = SubResource("CircleShape2D_yuhqy")

[node name="take_dmg_cooldown" type="Timer" parent="."]

[node name="area_of_harvest" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="harvest_shape" type="CollisionShape2D" parent="area_of_harvest"]
position = Vector2(75.4545, 50)
shape = SubResource("CircleShape2D_w4c5i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(79.6414, 49.8753)
scale = Vector2(3.5, 3.5)
sprite_frames = SubResource("SpriteFrames_852r0")
animation = &"tree_40"

[node name="pickup_area" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="pickup_shape" type="CollisionShape2D" parent="pickup_area"]
position = Vector2(79.6414, 49.8753)
shape = SubResource("CircleShape2D_0yo0s")

[connection signal="timeout" from="take_dmg_cooldown" to="." method="_on_take_dmg_cooldown_timeout"]
[connection signal="body_entered" from="area_of_harvest" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="area_of_harvest" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="pickup_area" to="." method="_on_pickup_area_body_entered"]
